Primarially UI fixes including adding night/day mode persistency, adding twitter sharing button, adding google analytics, squashing some js bugs, SEO, and enabling auto http >https redirect

--- a/frontend/css.css
+++ b/frontend/css.css
@@ -46,10 +46,6 @@ th, td {
   background-color: #D1F0F2;
 }
 
-.nightTimeRows{
-  background-color: #071F22 !important;
-}
-
 .nightTimeBody{
   background-color: black;
   }
@@ -113,12 +109,12 @@ table.center {
 }
 
 #btc_test.active, #btc_test:hover {
-    background-color: #4BCF51;
+    background-color: #FF9900;
     color: white;
 }
 
 #bch_test.active, #bch_test:hover {
-    background-color: #FF9900;
+    background-color: #4BCF51;
     color: white;
 }
 #btc_test {
@@ -171,3 +167,40 @@ thead {
   height:50px;
   width:100px;
   }
+  
+
+.paragraph {
+    color: #4BCF93;
+    font-size: 30px;
+    float:left;
+    }
+    
+#labelTable.nightTimeLabelTable tr:nth-child(even){
+     background-color: #071F22 !important;
+}
+
+ul.share-buttons, .twitterImage{
+  list-style: none;
+  padding: 0;
+  position: fixed;
+  right: 175px;
+  top: 30px;
+  width:50px; 
+  height:50px; 
+  float: right
+}
+
+ul.share-buttons li{
+  display: inline;
+}
+
+ul.share-buttons .sr-only{
+  position: absolute;
+  clip: rect(1px 1px 1px 1px);
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0;
+  border: 0;
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
+}
